syntax = "proto3";
option go_package = "./services/tail-go/rate-limiter/pb";
package ratelimit;

service RateLimiter {
  rpc Check(CheckRequest) returns (CheckResponse);
  rpc UpdateRule(UpdateRuleRequest) returns (UpdateRuleResponse);
}

message CheckRequest {
  string client_id = 1;
  string path = 2;
  int64 tokens = 3;
}

message CheckResponse {
  bool allowed = 1;
  int64 retry_after = 2;
}
